--- a/lucos_seinn.service
+++ b/lucos_seinn.service
@@ -1,5 +1,5 @@
 [Service]
-ExecStart=PORT=3000 /usr/bin/nodejs /web/lucos/lucos_seinn/index.js
+ExecStart=/usr/bin/npm start
 Restart=always
 StandardOutput=syslog
 StandardError=syslog
@@ -7,7 +7,7 @@ SyslogIdentifier=lucos_seinn
 User=lucos
 Group=lucos
 Environment=NODE_ENV=production
-Environment=port=3000
+Environment=PORT=3001
 WorkingDirectory=/web/lucos/lucos_seinn/
 
 [Install]
