--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,5 +2,12 @@
 	"short_name": "lucOS Seinn",
 	"start_url": "/",
 	"display": "fullscreen",
-	"theme_color": "rgba(100,100,255,0.8)"
+	"theme_color": "rgba(100,100,255,0.8)",
+	"icons":[
+		{
+	      "src": "/logo.jpg",
+	      "sizes": "192x192",
+	      "type": "image/jpg"
+	    }
+	]
 }
