use same colour all over the place to make it look like I've actually thought about it

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,7 @@
 	"start_url": "/",
 	"display": "fullscreen",
 	"theme_color": "rgba(100,100,255,0.8)",
+	"background_color": "rgba(100,100,255,0.8)",
 	"icons":[
 		{
 	      "src": "/logo.jpg",
