--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "browserify clientjs/v3.js > public/v3.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,11 @@
   },
   "homepage": "https://github.com/lucas42/lucos-seinn",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mustache-express": "^1.3.0",
+    "node-fetch": "^2.6.1"
+  },
+  "devDependencies": {
+    "browserify": "^17.0.0"
   }
 }
