pass server variables through to the client

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,7 @@ services:
       container_name: seinn
       ports: 
         - "3001:3001"
+      environment:
+        DEV: null
+        MEDIA_MANAGER: null
       image: lucas42/lucos_seinn
