--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mustache-express": "^1.3.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "browserify": "^17.0.0"
