rename project for consistency with other media projects (fixes #8)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,4 @@ services:
       environment:
         DEV: null
         MEDIA_MANAGER: null
-      image: lucas42/lucos_seinn
+      image: lucas42/lucos_media_seinn
