--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lucos-seinn",
+  "name": "lucos_media_seinn",
   "version": "3.0.0",
   "description": "Music Player",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:lucas42/lucos-seinn.git"
+    "url": "git@github.com:lucas42/lucos_media_seinn.git"
   },
   "keywords": [
     "lucos",
@@ -20,9 +20,9 @@
   ],
   "author": "lucas42",
   "bugs": {
-    "url": "https://github.com/lucas42/lucos-seinn/issues"
+    "url": "https://github.com/lucas42/lucos_media_seinn/issues"
   },
-  "homepage": "https://github.com/lucas42/lucos-seinn",
+  "homepage": "https://github.com/lucas42/lucos_media_seinn",
   "dependencies": {
     "express": "^4.17.1",
     "mustache-express": "^1.3.0",
