--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "lucos_media_seinn",
   "version": "3.0.0",
   "description": "Music Player",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "build": "browserify clientjs/v3.js > public/v3.js && browserify clientjs/service-worker/index.js > public/serviceworker-v3.js"
+    "start": "node src/server/index.js",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -25,11 +26,13 @@
   "homepage": "https://github.com/lucas42/lucos_media_seinn",
   "dependencies": {
     "express": "^4.18.1",
-    "mustache-express": "^1.3.2",
-    "node-fetch": "^2.6.7",
-    "uuid": "^8.3.2"
+    "mustache-express": "^1.3.2"
   },
   "devDependencies": {
-    "browserify": "^17.0.0"
+    "folder-hash": "^4.0.2",
+    "lucos_navbar": "^1.0.1",
+    "lucos_pubsub": "^1.0.1",
+    "uuid": "^8.3.2",
+    "webpack-cli": "^4.10.0"
   }
 }
