--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/lucas42/lucos_media_seinn",
   "dependencies": {
-    "express": "^4.19.2",
+    "express": "^5.0.0-beta.3",
     "mustache-express": "^1.3.2"
   },
   "devDependencies": {
