--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Music Player",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --expose-gc --input-type=module node_modules/mocha/bin/mocha tests",
     "start": "node src/server/index.js",
     "build": "webpack"
   },
@@ -30,8 +30,10 @@
   },
   "devDependencies": {
     "folder-hash": "^4.1.1",
+    "jsdom": "^26.1.0",
     "lucos_navbar": "^2.0.11",
     "lucos_pubsub": "^1.0.3",
+    "mocha": "^11.7.1",
     "restful-queue": "^1.0.12",
     "uuid": "^11.1.0",
     "webpack-cli": "^6.0.1"
