Send Authorization header for media file requests Uses credentials provided by Environment Variables.  Send to server using basic auth. Contributes to https://github.com/lucas42/lucos_private/issues/2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,6 @@ services:
     environment:
       - MEDIA_MANAGER_URL=https://ceol.l42.eu/
       - KEY_LUCOS_MEDIA_MANAGER
+      - KEY_LUCOS_PRIVATE
     image: lucas42/lucos_media_seinn
     restart: always
