--- a/src/resources/manifest.json
+++ b/src/resources/manifest.json
@@ -9,7 +9,8 @@
 		{
 	      "src": "/logo.jpg",
 	      "sizes": "192x192",
-	      "type": "image/jpg"
+	      "type": "image/jpg",
+	      "purpose": "any maskable"
 	    }
 	]
 }
