don't hardcode PORT now it's available from lucos_creds

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,12 @@ services:
     build: .
     container_name: seinn
     ports: 
-      - "3001:3001"
+      - $PORT:$PORT
     environment:
       - MEDIA_MANAGER_URL=https://ceol.l42.eu/
       - KEY_LUCOS_MEDIA_MANAGER
       - KEY_LUCOS_PRIVATE
       - ENVIRONMENT
+      - PORT
     image: lucas42/lucos_media_seinn
     restart: always
