use npm ci instead of npm install for more predictable results

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - checkout
       - run:
           name: Install Dependencies
-          command: npm i
+          command: npm ci
       - run:
           name: Run Tests
           command: npm test
